# educrawler

./: .gitignore  CLAUDE.md  SPEC.md  main.py  pyproject.toml  test.py  tests.md
configs/: config.py
src/: agent.py  base.py  browser.py  state.py  storage.py  utils.py
src/nodes/: __init__.py  discoverer.py  healer.py  judge.py  planner.py
src/prompts/: discoverer.md  healer.md  judge.md  planner.md
src/tools/: playwright_tools.py
